<resources>
    <string name="app_name">Aplicativo OMB Android</string>
    <string name="title_activity_lateral_">Lateral_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Logo">Descripcion_Logo_Bienvenida</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvido_su_contrase_a">¿Olvido su contraseña?</string>
    <string name="registrar">REGISTRAR</string>
    <string name="ingresar">INGRESAR</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="Descripcion_2">Imagen_Registrar</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="contactenos">Contactenos</string>
    <string name="bienvenido_al_menu_principal">Bienvenido al menu principal</string>
    <string name="Imagen_Forgot">Imagen_Principal_Forgot</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="imagen_principal">Imagen principal</string>
    <string name="Twitter_flt">Twitter</string>
    <string name="Fan_page_ftb">Fan page</string>
    <string name="Instagram">Instagram</string>
    <string name="Web">Pagina web</string>
    <string name="descripcion_btn_close_popup_login">Boton para cerrar</string>
    <string name="titulo_popup_login">Iniciando sesión...</string>
    <string name="credenciales_correctas">Credenciales correctas</string>
    <string name="error_login">Error al ingresar</string>
    <string name="error_text_login">Error de autentificación, por favor verifique que su usuario o contraseña sean
        correctos
    </string>
    <string name="Error_salir">Salir</string>
    <string name="title_activity_contenido_base_datos">Contenido_base_datos</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Gestion_label">Gestion de productos</string>
    <string name="documento">Documento</string>
    <string name="help">Ayuda</string>
    <string name="registrandose">Registrandose...</string>
    <string name="correcto">Siguiente</string>
    <string name="registro_completado_correctamente">Registro completado satisfactoriamente</string>
    <string name="error_al_registrarse">Error al registrarse</string>
    <string name="Vacios">Verifique que los campos no se encuentren vacios</string>
    <string name="volver">Volver</string>
</resources>
