<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ImageView
            android:layout_alignParentEnd="true"
            android:elevation="5dp"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icn_close" android:id="@+id/Btn_close_popup_login"
            android:contentDescription="@string/descripcion_btn_close_popup_login"/>

    <android.support.v7.widget.CardView

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="@color/md_green_500"
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_marginTop="10dp"
                        android:textColor="@color/md_white_1000"
                        android:textSize="30sp"
                        android:fontFamily="sans-serif-black"
                        android:textAlignment="center"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/titulo_popup_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/Titulo_popup_login"/>
                <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/Animacion_lottie"
                        app:lottie_imageAssetsFolder="assets"
                        app:lottie_fileName="519-load-complete.json"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        android:layout_width="match_parent"
                        android:layout_height="210dp"/>
                <TextView
                        android:visibility="visible"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:textSize="25sp"
                        android:textColor="@color/md_white_1000"
                        android:fontFamily="sans-serif-light"
                        android:textAlignment="center"
                        android:text="@string/credenciales_correctas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/Texto_oculto_popup_login_correcto"/>
                <Button
                        android:background="@drawable/btn_green_anim"
                        android:textSize="25sp"
                        android:textColor="@color/md_white_1000"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/ingresar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/Btn_continuar_ok"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>